[gd_scene load_steps=9 format=3 uid="uid://b8ar2fkqodoi8"]

[ext_resource type="Script" uid="uid://ck1sfmh5hvxcd" path="res://Scripts/game.gd" id="1_i6g32"]
[ext_resource type="Texture2D" uid="uid://g7omorjh0j52" path="res://Sprites/Floor.png" id="2_1l0tm"]
[ext_resource type="PackedScene" uid="uid://davrjqog8hx8u" path="res://Scenes/head.tscn" id="3_v158k"]
[ext_resource type="PackedScene" uid="uid://b8us630b85be5" path="res://Scenes/hud.tscn" id="4_h4fw4"]
[ext_resource type="PackedScene" uid="uid://c8xlbx87g8reh" path="res://Scenes/game_over.tscn" id="5_ldgsr"]
[ext_resource type="AudioStream" uid="uid://et7pwhelql6e" path="res://Sounds/Eat.wav" id="6_o5yvi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8dyx"]
size = Vector2(32, 608)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehe4w"]
size = Vector2(672, 32)

[node name="Game" type="Node2D"]
script = ExtResource("1_i6g32")

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(400, 400)
texture = ExtResource("2_1l0tm")
region_enabled = true
region_rect = Rect2(0, 0, 800, 800)

[node name="Snake" type="Node" parent="."]

[node name="Head" parent="Snake" instance=ExtResource("3_v158k")]
position = Vector2(400, 592)

[node name="Apples" type="Node" parent="."]

[node name="BorderLimits" type="Area2D" parent="."]

[node name="LeftmostBorder" type="CollisionShape2D" parent="BorderLimits"]
position = Vector2(48, 432)
shape = SubResource("RectangleShape2D_k8dyx")

[node name="RightmostBorder" type="CollisionShape2D" parent="BorderLimits"]
position = Vector2(752, 432)
shape = SubResource("RectangleShape2D_k8dyx")

[node name="UpperBorder" type="CollisionShape2D" parent="BorderLimits"]
position = Vector2(400, 112)
shape = SubResource("RectangleShape2D_ehe4w")

[node name="LowerBorder" type="CollisionShape2D" parent="BorderLimits"]
position = Vector2(400, 752)
shape = SubResource("RectangleShape2D_ehe4w")

[node name="SoundEffects" type="Node" parent="."]

[node name="EatAudioPlayer" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("6_o5yvi")
volume_db = 6.0

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_h4fw4")]

[node name="GameOver" parent="UILayer" instance=ExtResource("5_ldgsr")]
visible = false

[connection signal="game_lost" from="." to="." method="_on_game_lost"]
[connection signal="has_moved" from="Snake/Head" to="." method="_on_player_moved"]
[connection signal="area_entered" from="BorderLimits" to="." method="_on_border_area_entered"]
